fixed the spacing in the sticker on mtn page
fixed the spacing in the sticker on mtn page

--- a/enjoy-the-outdoors/styles/styles.css
+++ b/enjoy-the-outdoors/styles/styles.css
@@ -98,3 +98,6 @@ img {
     padding-top: 40px;
 }
 
+.dropdown {
+    margin-bottom: 10%;
+}
